[package]
name = "tc-yt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true

[dependencies]
configparser = "3.1.0"
google-youtube3 = "5.0.5"
libc = "0.2.155"
msgbox = "0.7.0"
widestring = "1.1.0"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging"  ]}
