[package]
name = "tc-yt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true

[dependencies]
configparser = "3.1.0"
libc = "0.2.155"
msgbox = "0.7.0"
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", default-features = false, features = [
    "combobox",
    "frame",
    "textbox",
]}
regex-lite = "0.1.6"
reqwest = { version = "0.12.5", default-features = false, features = ["brotli", "blocking", "charset", "gzip", "http2", "json", "rustls-tls"]}
serde_json = "1.0.121"
uuid = { version = "1.10.0", features = ["v4"]}
widestring = "1.1.0"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Storage", "Win32_Storage_FileSystem"  ]}
